--- a/index.html
+++ b/index.html
@@ -28,31 +28,25 @@
                     <li><button class="boton-barra active">Productos</button></li>
                     <li><button class="boton-barra">Medios de pago</button></li>
                     <li><button class="boton-barra">Envíos</button></li>
-                    <li><button class="boton-barra"><a href="carrito.html"><i
-                                    class="bi bi-cart3"></i>Carrito</a></button></li>
-
-
+                    <li><button class="boton-barra"><a href="carrito.html">Carrito<i
+                                    class="bi bi-cart3 icono"></i></a></button></li>
 
                 </ul>
-
-
             </nav>
-
-
         </aside>
 
 
         <main>
             <h2 class="titulo-productos">TODOS LOS PRODUCTOS</h2>
 
-            <div class="contenedor-productos">
+            <div id="contenedor-productos" class="contenedor-productos">
 
 
-                <div class="producto">
+                <!-- <div class="producto">
                     <img class="producto-imagen" src="./img/palo.brabo.jpg" alt="">
                     <div class="producto-info">
                         <h3 class="producto-titulo">PALO BRABO ELITE 3 80%-CARBONO</h3>
-                        <p class="produto-precio">$300.500</p>
+                        <p class="producto-precio">300.500</p>
                         <button class="producto-comprar">COMPRAR</button>
                     </div>
                 </div>
@@ -161,12 +155,12 @@
                 <div class="producto">
                     <img class="producto-imagen" src="./img/canilleras.vlack.jpg" alt="">
                     <div class="producto-info">
-                        <h3 class="producto-titulo">CANILLERAS ANATOMICA VLACK-CELESTE</h3>
+                        <h3 class="producto-titulo">CANILLERAS VLACK-CELESTE</h3>
                         <p class="produto-precio">$27.000</p>
                         <button class="producto-comprar">COMPRAR</button>
                     </div>
                 </div>
-
+ -->
 
 
             </div>
